# coreaudio-node

./: AGENTS.md  CMakeLists.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml
docs/: ELECTRON_WINDOWS_CRASH_FIX.md
examples/: record-mic.mjs  record-system.mjs  test-mic-activity.mjs  test-permission.mjs
native/include/: audio_bridge.h
native/macos/swift/: AudioDeviceManager.swift  AudioPermission.swift  CoreAudioBridge.swift  MicActivityMonitor.swift
native/napi/: audio_napi.cpp
native/windows/: mta_thread.h  wasapi_capture.cpp  wasapi_capture.h  windows_bridge.cpp
src/: base-recorder.ts  devices.ts  microphone-recorder.ts  permission.ts  system-audio-recorder.ts
